[gd_scene load_steps=10 format=3 uid="uid://cks6mfgxxg4y"]

[ext_resource type="Script" path="res://juego.gd" id="1_dx2mh"]
[ext_resource type="Script" path="res://parallax_background.gd" id="6_bwqw3"]
[ext_resource type="Texture2D" uid="uid://dxkash7b6ydoq" path="res://male.png" id="6_mq6jb"]
[ext_resource type="Texture2D" uid="uid://dnwmyqxjpg88n" path="res://parallax.jpg" id="7_ruqoj"]
[ext_resource type="Texture2D" uid="uid://bpb6ffevjpt0t" path="res://floor.png" id="8_4s3fm"]
[ext_resource type="Script" path="res://player.gd" id="9_3bkev"]
[ext_resource type="Script" path="res://rich_text_label.gd" id="13_5u3t5"]

[sub_resource type="FontFile" id="FontFile_e1wm8"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0

[sub_resource type="Theme" id="Theme_4m13l"]
default_font_size = 70

[node name="Node2D" type="Node2D"]
script = ExtResource("1_dx2mh")

[node name="Parallax2D" type="Parallax2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("6_bwqw3")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1440, 0)

[node name="Parallax" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -10
texture_repeat = 2
position = Vector2(537, 249)
scale = Vector2(1.8, 1.8)
texture = ExtResource("7_ruqoj")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(626, 577)
script = ExtResource("9_3bkev")
metadata/_edit_group_ = true

[node name="Male" type="Sprite2D" parent="Player"]
position = Vector2(4, -2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_mq6jb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2(4, -2)
scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(-29.5, -475.5, -29.5, -474.5, -30.5, -474.5, -30.5, -473.5, -31.5, -473.5, -31.5, -472.5, -32.5, -472.5, -32.5, -471.5, -35.5, -471.5, -35.5, -470.5, -40.5, -470.5, -40.5, -469.5, -43.5, -469.5, -43.5, -468.5, -47.5, -468.5, -47.5, -467.5, -49.5, -467.5, -49.5, -466.5, -51.5, -466.5, -51.5, -465.5, -54.5, -465.5, -54.5, -464.5, -61.5, -464.5, -61.5, -463.5, -64.5, -463.5, -64.5, -462.5, -84.5, -462.5, -84.5, -461.5, -85.5, -461.5, -85.5, -460.5, -87.5, -460.5, -87.5, -459.5, -88.5, -459.5, -88.5, -458.5, -90.5, -458.5, -90.5, -457.5, -92.5, -457.5, -92.5, -456.5, -94.5, -456.5, -94.5, -455.5, -97.5, -455.5, -97.5, -454.5, -101.5, -454.5, -101.5, -453.5, -104.5, -453.5, -104.5, -452.5, -107.5, -452.5, -107.5, -451.5, -108.5, -451.5, -108.5, -450.5, -110.5, -450.5, -110.5, -449.5, -113.5, -449.5, -113.5, -448.5, -116.5, -448.5, -116.5, -447.5, -117.5, -447.5, -117.5, -446.5, -118.5, -446.5, -118.5, -445.5, -119.5, -445.5, -119.5, -444.5, -120.5, -444.5, -120.5, -443.5, -121.5, -443.5, -121.5, -442.5, -123.5, -442.5, -123.5, -441.5, -126.5, -441.5, -126.5, -440.5, -128.5, -440.5, -128.5, -439.5, -130.5, -439.5, -130.5, -438.5, -132.5, -438.5, -132.5, -437.5, -134.5, -437.5, -134.5, -436.5, -137.5, -436.5, -137.5, -435.5, -138.5, -435.5, -138.5, -434.5, -139.5, -434.5, -139.5, -433.5, -141.5, -433.5, -141.5, -432.5, -142.5, -432.5, -142.5, -431.5, -144.5, -431.5, -144.5, -430.5, -146.5, -430.5, -146.5, -429.5, -147.5, -429.5, -147.5, -428.5, -148.5, -428.5, -148.5, -427.5, -149.5, -427.5, -149.5, -426.5, -150.5, -426.5, -150.5, -425.5, -151.5, -425.5, -151.5, -424.5, -153.5, -424.5, -153.5, -423.5, -156.5, -423.5, -156.5, -422.5, -158.5, -422.5, -158.5, -421.5, -159.5, -421.5, -159.5, -420.5, -160.5, -420.5, -160.5, -419.5, -161.5, -419.5, -161.5, -418.5, -162.5, -418.5, -162.5, -417.5, -163.5, -417.5, -163.5, -416.5, -165.5, -416.5, -165.5, -415.5, -166.5, -415.5, -166.5, -414.5, -167.5, -414.5, -167.5, -413.5, -169.5, -413.5, -169.5, -412.5, -170.5, -412.5, -170.5, -411.5, -172.5, -411.5, -172.5, -410.5, -173.5, -410.5, -173.5, -409.5, -174.5, -409.5, -174.5, -408.5, -175.5, -408.5, -175.5, -406.5, -177.5, -406.5, -177.5, -405.5, -178.5, -405.5, -178.5, -404.5, -179.5, -404.5, -179.5, -403.5, -180.5, -403.5, -180.5, -402.5, -181.5, -402.5, -181.5, -401.5, -182.5, -401.5, -182.5, -400.5, -183.5, -400.5, -183.5, -399.5, -185.5, -399.5, -185.5, -398.5, -186.5, -398.5, -186.5, -397.5, -188.5, -397.5, -188.5, -396.5, -189.5, -396.5, -189.5, -395.5, -190.5, -395.5, -190.5, -393.5, -191.5, -393.5, -191.5, -392.5, -192.5, -392.5, -192.5, -391.5, -193.5, -391.5, -193.5, -390.5, -194.5, -390.5, -194.5, -389.5, -195.5, -389.5, -195.5, -388.5, -196.5, -388.5, -196.5, -386.5, -197.5, -386.5, -197.5, -385.5, -199.5, -385.5, -199.5, -384.5, -200.5, -384.5, -200.5, -383.5, -201.5, -383.5, -201.5, -382.5, -202.5, -382.5, -202.5, -380.5, -203.5, -380.5, -203.5, -379.5, -204.5, -379.5, -204.5, -378.5, -205.5, -378.5, -205.5, -376.5, -206.5, -376.5, -206.5, -375.5, -207.5, -375.5, -207.5, -374.5, -208.5, -374.5, -208.5, -373.5, -209.5, -373.5, -209.5, -372.5, -210.5, -372.5, -210.5, -371.5, -211.5, -371.5, -211.5, -370.5, -212.5, -370.5, -212.5, -369.5, -213.5, -369.5, -213.5, -367.5, -214.5, -367.5, -214.5, -366.5, -215.5, -366.5, -215.5, -364.5, -216.5, -364.5, -216.5, -363.5, -217.5, -363.5, -217.5, -362.5, -218.5, -362.5, -218.5, -361.5, -219.5, -361.5, -219.5, -360.5, -220.5, -360.5, -220.5, -358.5, -221.5, -358.5, -221.5, -357.5, -222.5, -357.5, -222.5, -355.5, -223.5, -355.5, -223.5, -353.5, -225.5, -353.5, -225.5, -352.5, -226.5, -352.5, -226.5, -351.5, -227.5, -351.5, -227.5, -349.5, -228.5, -349.5, -228.5, -348.5, -229.5, -348.5, -229.5, -346.5, -230.5, -346.5, -230.5, -345.5, -231.5, -345.5, -231.5, -344.5, -232.5, -344.5, -232.5, -342.5, -233.5, -342.5, -233.5, -340.5, -234.5, -340.5, -234.5, -338.5, -235.5, -338.5, -235.5, -336.5, -236.5, -336.5, -236.5, -334.5, -237.5, -334.5, -237.5, -333.5, -238.5, -333.5, -238.5, -332.5, -239.5, -332.5, -239.5, -331.5, -240.5, -331.5, -240.5, -328.5, -241.5, -328.5, -241.5, -326.5, -242.5, -326.5, -242.5, -325.5, -243.5, -325.5, -243.5, -323.5, -244.5, -323.5, -244.5, -322.5, -245.5, -322.5, -245.5, -320.5, -246.5, -320.5, -246.5, -319.5, -247.5, -319.5, -247.5, -317.5, -248.5, -317.5, -248.5, -316.5, -249.5, -316.5, -249.5, -314.5, -250.5, -314.5, -250.5, -312.5, -252.5, -312.5, -252.5, -311.5, -253.5, -311.5, -253.5, -310.5, -254.5, -310.5, -254.5, -308.5, -255.5, -308.5, -255.5, -305.5, -256.5, -305.5, -256.5, -302.5, -257.5, -302.5, -257.5, -299.5, -258.5, -299.5, -258.5, -297.5, -259.5, -297.5, -259.5, -294.5, -260.5, -294.5, -260.5, -291.5, -261.5, -291.5, -261.5, -288.5, -262.5, -288.5, -262.5, -286.5, -263.5, -286.5, -263.5, -284.5, -264.5, -284.5, -264.5, -282.5, -265.5, -282.5, -265.5, -281.5, -266.5, -281.5, -266.5, -279.5, -267.5, -279.5, -267.5, -276.5, -268.5, -276.5, -268.5, -274.5, -269.5, -274.5, -269.5, -270.5, -270.5, -270.5, -270.5, -266.5, -271.5, -266.5, -271.5, -263.5, -272.5, -263.5, -272.5, -260.5, -273.5, -260.5, -273.5, -257.5, -274.5, -257.5, -274.5, -255.5, -275.5, -255.5, -275.5, -252.5, -276.5, -252.5, -276.5, -249.5, -277.5, -249.5, -277.5, -247.5, -278.5, -247.5, -278.5, -245.5, -279.5, -245.5, -279.5, -244.5, -280.5, -244.5, -280.5, -242.5, -281.5, -242.5, -281.5, -239.5, -282.5, -239.5, -282.5, -237.5, -281.5, -237.5, -281.5, -232.5, -282.5, -232.5, -282.5, -229.5, -283.5, -229.5, -283.5, -225.5, -284.5, -225.5, -284.5, -222.5, -285.5, -222.5, -285.5, -219.5, -286.5, -219.5, -286.5, -217.5, -287.5, -217.5, -287.5, -214.5, -288.5, -214.5, -288.5, -211.5, -289.5, -211.5, -289.5, -208.5, -290.5, -208.5, -290.5, -206.5, -291.5, -206.5, -291.5, -204.5, -292.5, -204.5, -292.5, -202.5, -293.5, -202.5, -293.5, -198.5, -292.5, -198.5, -292.5, -193.5, -293.5, -193.5, -293.5, -190.5, -294.5, -190.5, -294.5, -186.5, -295.5, -186.5, -295.5, -182.5, -296.5, -182.5, -296.5, -177.5, -297.5, -177.5, -297.5, -172.5, -298.5, -172.5, -298.5, -168.5, -299.5, -168.5, -299.5, -163.5, -300.5, -163.5, -300.5, -158.5, -301.5, -158.5, -301.5, -153.5, -300.5, -153.5, -300.5, -146.5, -301.5, -146.5, -301.5, -142.5, -302.5, -142.5, -302.5, -138.5, -303.5, -138.5, -303.5, -135.5, -304.5, -135.5, -304.5, -133.5, -305.5, -133.5, -305.5, -129.5, -306.5, -129.5, -306.5, -125.5, -307.5, -125.5, -307.5, -120.5, -308.5, -120.5, -308.5, -116.5, -309.5, -116.5, -309.5, -111.5, -310.5, -111.5, -310.5, -106.5, -311.5, -106.5, -311.5, -102.5, -312.5, -102.5, -312.5, -98.5, -313.5, -98.5, -313.5, -93.5, -314.5, -93.5, -314.5, -89.5, -315.5, -89.5, -315.5, -83.5, -316.5, -83.5, -316.5, -80.5, -317.5, -80.5, -317.5, -78.5, -318.5, -78.5, -318.5, -74.5, -319.5, -74.5, -319.5, -70.5, -320.5, -70.5, -320.5, -65.5, -321.5, -65.5, -321.5, -61.5, -322.5, -61.5, -322.5, -56.5, -323.5, -56.5, -323.5, -53.5, -324.5, -53.5, -324.5, -50.5, -325.5, -50.5, -325.5, -45.5, -326.5, -45.5, -326.5, -36.5, -327.5, -36.5, -327.5, -30.5, -328.5, -30.5, -328.5, -24.5, -329.5, -24.5, -329.5, -19.5, -330.5, -19.5, -330.5, -16.5, -331.5, -16.5, -331.5, -14.5, -332.5, -14.5, -332.5, -11.5, -333.5, -11.5, -333.5, -8.5, -334.5, -8.5, -334.5, -5.5, -335.5, -5.5, -335.5, -1.5, -336.5, -1.5, -336.5, 1.5, -337.5, 1.5, -337.5, 6.5, -336.5, 6.5, -336.5, 16.5, -337.5, 16.5, -337.5, 19.5, -338.5, 19.5, -338.5, 21.5, -339.5, 21.5, -339.5, 24.5, -340.5, 24.5, -340.5, 26.5, -341.5, 26.5, -341.5, 27.5, -342.5, 27.5, -342.5, 30.5, -343.5, 30.5, -343.5, 33.5, -344.5, 33.5, -344.5, 35.5, -345.5, 35.5, -345.5, 36.5, -346.5, 36.5, -346.5, 45.5, -347.5, 45.5, -347.5, 48.5, -348.5, 48.5, -348.5, 51.5, -349.5, 51.5, -349.5, 53.5, -350.5, 53.5, -350.5, 55.5, -351.5, 55.5, -351.5, 58.5, -352.5, 58.5, -352.5, 60.5, -353.5, 60.5, -353.5, 62.5, -354.5, 62.5, -354.5, 69.5, -355.5, 69.5, -355.5, 72.5, -356.5, 72.5, -356.5, 74.5, -355.5, 74.5, -355.5, 78.5, -354.5, 78.5, -354.5, 90.5, -355.5, 90.5, -355.5, 93.5, -356.5, 93.5, -356.5, 100.5, -357.5, 100.5, -357.5, 103.5, -358.5, 103.5, -358.5, 105.5, -359.5, 105.5, -359.5, 106.5, -360.5, 106.5, -360.5, 107.5, -361.5, 107.5, -361.5, 111.5, -362.5, 111.5, -362.5, 114.5, -363.5, 114.5, -363.5, 118.5, -364.5, 118.5, -364.5, 122.5, -365.5, 122.5, -365.5, 125.5, -366.5, 125.5, -366.5, 128.5, -367.5, 128.5, -367.5, 131.5, -368.5, 131.5, -368.5, 134.5, -369.5, 134.5, -369.5, 137.5, -370.5, 137.5, -370.5, 139.5, -371.5, 139.5, -371.5, 141.5, -372.5, 141.5, -372.5, 142.5, -373.5, 142.5, -373.5, 145.5, -374.5, 145.5, -374.5, 153.5, -375.5, 153.5, -375.5, 156.5, -376.5, 156.5, -376.5, 158.5, -377.5, 158.5, -377.5, 160.5, -378.5, 160.5, -378.5, 163.5, -379.5, 163.5, -379.5, 165.5, -380.5, 165.5, -380.5, 167.5, -381.5, 167.5, -381.5, 169.5, -382.5, 169.5, -382.5, 171.5, -383.5, 171.5, -383.5, 174.5, -384.5, 174.5, -384.5, 176.5, -385.5, 176.5, -385.5, 184.5, -386.5, 184.5, -386.5, 187.5, -387.5, 187.5, -387.5, 189.5, -388.5, 189.5, -388.5, 191.5, -389.5, 191.5, -389.5, 192.5, -390.5, 192.5, -390.5, 194.5, -391.5, 194.5, -391.5, 196.5, -392.5, 196.5, -392.5, 198.5, -393.5, 198.5, -393.5, 202.5, -394.5, 202.5, -394.5, 205.5, -395.5, 205.5, -395.5, 207.5, -396.5, 207.5, -396.5, 209.5, -397.5, 209.5, -397.5, 211.5, -398.5, 211.5, -398.5, 213.5, -399.5, 213.5, -399.5, 216.5, -400.5, 216.5, -400.5, 219.5, -401.5, 219.5, -401.5, 221.5, -403.5, 221.5, -403.5, 222.5, -406.5, 222.5, -406.5, 223.5, -408.5, 223.5, -408.5, 224.5, -410.5, 224.5, -410.5, 225.5, -412.5, 225.5, -412.5, 226.5, -413.5, 226.5, -413.5, 227.5, -415.5, 227.5, -415.5, 228.5, -417.5, 228.5, -417.5, 229.5, -418.5, 229.5, -418.5, 230.5, -420.5, 230.5, -420.5, 231.5, -423.5, 231.5, -423.5, 232.5, -425.5, 232.5, -425.5, 233.5, -428.5, 233.5, -428.5, 234.5, -430.5, 234.5, -430.5, 235.5, -431.5, 235.5, -431.5, 236.5, -433.5, 236.5, -433.5, 237.5, -435.5, 237.5, -435.5, 238.5, -436.5, 238.5, -436.5, 239.5, -437.5, 239.5, -437.5, 240.5, -439.5, 240.5, -439.5, 241.5, -442.5, 241.5, -442.5, 242.5, -443.5, 242.5, -443.5, 243.5, -445.5, 243.5, -445.5, 244.5, -447.5, 244.5, -447.5, 245.5, -450.5, 245.5, -450.5, 246.5, -452.5, 246.5, -452.5, 247.5, -455.5, 247.5, -455.5, 248.5, -458.5, 248.5, -458.5, 249.5, -460.5, 249.5, -460.5, 250.5, -463.5, 250.5, -463.5, 251.5, -465.5, 251.5, -465.5, 252.5, -468.5, 252.5, -468.5, 253.5, -470.5, 253.5, -470.5, 254.5, -472.5, 254.5, -472.5, 255.5, -475.5, 255.5, -475.5, 256.5, -478.5, 256.5, -478.5, 257.5, -481.5, 257.5, -481.5, 258.5, -483.5, 258.5, -483.5, 259.5, -486.5, 259.5, -486.5, 260.5, -488.5, 260.5, -488.5, 261.5, -490.5, 261.5, -490.5, 262.5, -493.5, 262.5, -493.5, 263.5, -497.5, 263.5, -497.5, 264.5, -498.5, 264.5, -498.5, 265.5, -499.5, 265.5, -499.5, 266.5, -500.5, 266.5, -500.5, 474.5, -499.5, 474.5, -499.5, 475.5, -498.5, 475.5, -498.5, 476.5, 498.5, 476.5, 498.5, 475.5, 499.5, 475.5, 499.5, 474.5, 500.5, 474.5, 500.5, 461.5, 499.5, 461.5, 499.5, 459.5, 498.5, 459.5, 498.5, 456.5, 497.5, 456.5, 497.5, 451.5, 496.5, 451.5, 496.5, 448.5, 495.5, 448.5, 495.5, 440.5, 494.5, 440.5, 494.5, 436.5, 493.5, 436.5, 493.5, 433.5, 492.5, 433.5, 492.5, 430.5, 491.5, 430.5, 491.5, 424.5, 490.5, 424.5, 490.5, 418.5, 489.5, 418.5, 489.5, 415.5, 488.5, 415.5, 488.5, 408.5, 487.5, 408.5, 487.5, 400.5, 486.5, 400.5, 486.5, 395.5, 485.5, 395.5, 485.5, 392.5, 484.5, 392.5, 484.5, 388.5, 483.5, 388.5, 483.5, 381.5, 482.5, 381.5, 482.5, 356.5, 481.5, 356.5, 481.5, 352.5, 480.5, 352.5, 480.5, 337.5, 479.5, 337.5, 479.5, 336.5, 478.5, 336.5, 478.5, 334.5, 477.5, 334.5, 477.5, 332.5, 476.5, 332.5, 476.5, 329.5, 475.5, 329.5, 475.5, 325.5, 476.5, 325.5, 476.5, 322.5, 477.5, 322.5, 477.5, 320.5, 479.5, 320.5, 479.5, 319.5, 480.5, 319.5, 480.5, 318.5, 481.5, 318.5, 481.5, 317.5, 480.5, 317.5, 480.5, 315.5, 479.5, 315.5, 479.5, 314.5, 478.5, 314.5, 478.5, 312.5, 477.5, 312.5, 477.5, 311.5, 476.5, 311.5, 476.5, 310.5, 475.5, 310.5, 475.5, 308.5, 474.5, 308.5, 474.5, 307.5, 473.5, 307.5, 473.5, 306.5, 472.5, 306.5, 472.5, 305.5, 471.5, 305.5, 471.5, 303.5, 470.5, 303.5, 470.5, 302.5, 469.5, 302.5, 469.5, 300.5, 468.5, 300.5, 468.5, 299.5, 467.5, 299.5, 467.5, 298.5, 466.5, 298.5, 466.5, 296.5, 465.5, 296.5, 465.5, 295.5, 464.5, 295.5, 464.5, 294.5, 463.5, 294.5, 463.5, 293.5, 462.5, 293.5, 462.5, 291.5, 461.5, 291.5, 461.5, 290.5, 460.5, 290.5, 460.5, 289.5, 456.5, 289.5, 456.5, 288.5, 453.5, 288.5, 453.5, 287.5, 442.5, 287.5, 442.5, 286.5, 439.5, 286.5, 439.5, 285.5, 438.5, 285.5, 438.5, 284.5, 437.5, 284.5, 437.5, 282.5, 436.5, 282.5, 436.5, 280.5, 435.5, 280.5, 435.5, 279.5, 434.5, 279.5, 434.5, 278.5, 405.5, 278.5, 405.5, 277.5, 402.5, 277.5, 402.5, 276.5, 401.5, 276.5, 401.5, 275.5, 400.5, 275.5, 400.5, 272.5, 399.5, 272.5, 399.5, 268.5, 398.5, 268.5, 398.5, 266.5, 397.5, 266.5, 397.5, 263.5, 396.5, 263.5, 396.5, 261.5, 395.5, 261.5, 395.5, 258.5, 394.5, 258.5, 394.5, 256.5, 395.5, 256.5, 395.5, 253.5, 396.5, 253.5, 396.5, 251.5, 397.5, 251.5, 397.5, 238.5, 396.5, 238.5, 396.5, 236.5, 395.5, 236.5, 395.5, 234.5, 394.5, 234.5, 394.5, 232.5, 393.5, 232.5, 393.5, 231.5, 392.5, 231.5, 392.5, 230.5, 391.5, 230.5, 391.5, 228.5, 390.5, 228.5, 390.5, 225.5, 389.5, 225.5, 389.5, 222.5, 388.5, 222.5, 388.5, 221.5, 387.5, 221.5, 387.5, 219.5, 386.5, 219.5, 386.5, 218.5, 385.5, 218.5, 385.5, 217.5, 383.5, 217.5, 383.5, 215.5, 382.5, 215.5, 382.5, 212.5, 381.5, 212.5, 381.5, 207.5, 380.5, 207.5, 380.5, 206.5, 379.5, 206.5, 379.5, 205.5, 377.5, 205.5, 377.5, 204.5, 376.5, 204.5, 376.5, 203.5, 375.5, 203.5, 375.5, 202.5, 374.5, 202.5, 374.5, 201.5, 373.5, 201.5, 373.5, 199.5, 372.5, 199.5, 372.5, 197.5, 371.5, 197.5, 371.5, 196.5, 370.5, 196.5, 370.5, 195.5, 369.5, 195.5, 369.5, 193.5, 368.5, 193.5, 368.5, 191.5, 367.5, 191.5, 367.5, 190.5, 366.5, 190.5, 366.5, 189.5, 365.5, 189.5, 365.5, 187.5, 364.5, 187.5, 364.5, 185.5, 363.5, 185.5, 363.5, 184.5, 362.5, 184.5, 362.5, 183.5, 361.5, 183.5, 361.5, 182.5, 360.5, 182.5, 360.5, 181.5, 359.5, 181.5, 359.5, 179.5, 358.5, 179.5, 358.5, 177.5, 357.5, 177.5, 357.5, 176.5, 356.5, 176.5, 356.5, 174.5, 355.5, 174.5, 355.5, 171.5, 354.5, 171.5, 354.5, 167.5, 353.5, 167.5, 353.5, 164.5, 352.5, 164.5, 352.5, 163.5, 351.5, 163.5, 351.5, 161.5, 350.5, 161.5, 350.5, 159.5, 349.5, 159.5, 349.5, 157.5, 348.5, 157.5, 348.5, 155.5, 347.5, 155.5, 347.5, 152.5, 346.5, 152.5, 346.5, 148.5, 345.5, 148.5, 345.5, 146.5, 344.5, 146.5, 344.5, 145.5, 343.5, 145.5, 343.5, 143.5, 342.5, 143.5, 342.5, 140.5, 341.5, 140.5, 341.5, 132.5, 340.5, 132.5, 340.5, 130.5, 339.5, 130.5, 339.5, 129.5, 338.5, 129.5, 338.5, 128.5, 337.5, 128.5, 337.5, 126.5, 336.5, 126.5, 336.5, 124.5, 335.5, 124.5, 335.5, 122.5, 334.5, 122.5, 334.5, 119.5, 333.5, 119.5, 333.5, 91.5, 332.5, 91.5, 332.5, 90.5, 331.5, 90.5, 331.5, 88.5, 330.5, 88.5, 330.5, 87.5, 329.5, 87.5, 329.5, 86.5, 328.5, 86.5, 328.5, 84.5, 327.5, 84.5, 327.5, 81.5, 326.5, 81.5, 326.5, 80.5, 325.5, 80.5, 325.5, 79.5, 324.5, 79.5, 324.5, 78.5, 323.5, 78.5, 323.5, 77.5, 322.5, 77.5, 322.5, 76.5, 321.5, 76.5, 321.5, 74.5, 320.5, 74.5, 320.5, 71.5, 319.5, 71.5, 319.5, 68.5, 318.5, 68.5, 318.5, 61.5, 317.5, 61.5, 317.5, 57.5, 316.5, 57.5, 316.5, 53.5, 317.5, 53.5, 317.5, 50.5, 318.5, 50.5, 318.5, 48.5, 319.5, 48.5, 319.5, 47.5, 320.5, 47.5, 320.5, 42.5, 319.5, 42.5, 319.5, 35.5, 320.5, 35.5, 320.5, 32.5, 319.5, 32.5, 319.5, 29.5, 318.5, 29.5, 318.5, 25.5, 317.5, 25.5, 317.5, 21.5, 316.5, 21.5, 316.5, 16.5, 317.5, 16.5, 317.5, 9.5, 316.5, 9.5, 316.5, 4.5, 315.5, 4.5, 315.5, -0.5, 314.5, -0.5, 314.5, -6.5, 313.5, -6.5, 313.5, -9.5, 312.5, -9.5, 312.5, -12.5, 311.5, -12.5, 311.5, -19.5, 310.5, -19.5, 310.5, -40.5, 309.5, -40.5, 309.5, -44.5, 310.5, -44.5, 310.5, -45.5, 309.5, -45.5, 309.5, -52.5, 310.5, -52.5, 310.5, -57.5, 309.5, -57.5, 309.5, -59.5, 308.5, -59.5, 308.5, -62.5, 307.5, -62.5, 307.5, -66.5, 306.5, -66.5, 306.5, -73.5, 305.5, -73.5, 305.5, -78.5, 304.5, -78.5, 304.5, -81.5, 303.5, -81.5, 303.5, -83.5, 302.5, -83.5, 302.5, -85.5, 301.5, -85.5, 301.5, -87.5, 300.5, -87.5, 300.5, -88.5, 299.5, -88.5, 299.5, -90.5, 298.5, -90.5, 298.5, -93.5, 297.5, -93.5, 297.5, -95.5, 296.5, -95.5, 296.5, -97.5, 295.5, -97.5, 295.5, -99.5, 294.5, -99.5, 294.5, -102.5, 293.5, -102.5, 293.5, -107.5, 292.5, -107.5, 292.5, -111.5, 293.5, -111.5, 293.5, -114.5, 294.5, -114.5, 294.5, -116.5, 293.5, -116.5, 293.5, -135.5, 292.5, -135.5, 292.5, -150.5, 291.5, -150.5, 291.5, -164.5, 290.5, -164.5, 290.5, -171.5, 289.5, -171.5, 289.5, -181.5, 288.5, -181.5, 288.5, -183.5, 287.5, -183.5, 287.5, -184.5, 286.5, -184.5, 286.5, -186.5, 285.5, -186.5, 285.5, -188.5, 284.5, -188.5, 284.5, -190.5, 283.5, -190.5, 283.5, -192.5, 282.5, -192.5, 282.5, -195.5, 281.5, -195.5, 281.5, -199.5, 280.5, -199.5, 280.5, -200.5, 279.5, -200.5, 279.5, -202.5, 278.5, -202.5, 278.5, -205.5, 277.5, -205.5, 277.5, -207.5, 278.5, -207.5, 278.5, -234.5, 277.5, -234.5, 277.5, -236.5, 276.5, -236.5, 276.5, -238.5, 275.5, -238.5, 275.5, -241.5, 274.5, -241.5, 274.5, -263.5, 273.5, -263.5, 273.5, -264.5, 272.5, -264.5, 272.5, -265.5, 271.5, -265.5, 271.5, -266.5, 270.5, -266.5, 270.5, -267.5, 269.5, -267.5, 269.5, -269.5, 268.5, -269.5, 268.5, -271.5, 267.5, -271.5, 267.5, -272.5, 266.5, -272.5, 266.5, -273.5, 265.5, -273.5, 265.5, -274.5, 264.5, -274.5, 264.5, -275.5, 263.5, -275.5, 263.5, -276.5, 262.5, -276.5, 262.5, -278.5, 261.5, -278.5, 261.5, -281.5, 260.5, -281.5, 260.5, -298.5, 259.5, -298.5, 259.5, -299.5, 258.5, -299.5, 258.5, -300.5, 257.5, -300.5, 257.5, -302.5, 256.5, -302.5, 256.5, -305.5, 255.5, -305.5, 255.5, -308.5, 254.5, -308.5, 254.5, -344.5, 253.5, -344.5, 253.5, -345.5, 252.5, -345.5, 252.5, -346.5, 251.5, -346.5, 251.5, -348.5, 250.5, -348.5, 250.5, -349.5, 249.5, -349.5, 249.5, -351.5, 248.5, -351.5, 248.5, -354.5, 247.5, -354.5, 247.5, -359.5, 246.5, -359.5, 246.5, -360.5, 245.5, -360.5, 245.5, -361.5, 244.5, -361.5, 244.5, -362.5, 243.5, -362.5, 243.5, -363.5, 242.5, -363.5, 242.5, -364.5, 240.5, -364.5, 240.5, -365.5, 239.5, -365.5, 239.5, -366.5, 237.5, -366.5, 237.5, -367.5, 236.5, -367.5, 236.5, -368.5, 234.5, -368.5, 234.5, -369.5, 233.5, -369.5, 233.5, -370.5, 232.5, -370.5, 232.5, -371.5, 231.5, -371.5, 231.5, -372.5, 229.5, -372.5, 229.5, -373.5, 228.5, -373.5, 228.5, -374.5, 227.5, -374.5, 227.5, -375.5, 225.5, -375.5, 225.5, -376.5, 223.5, -376.5, 223.5, -377.5, 222.5, -377.5, 222.5, -378.5, 219.5, -378.5, 219.5, -379.5, 217.5, -379.5, 217.5, -380.5, 215.5, -380.5, 215.5, -381.5, 214.5, -381.5, 214.5, -382.5, 213.5, -382.5, 213.5, -383.5, 212.5, -383.5, 212.5, -384.5, 211.5, -384.5, 211.5, -385.5, 209.5, -385.5, 209.5, -386.5, 208.5, -386.5, 208.5, -387.5, 206.5, -387.5, 206.5, -388.5, 204.5, -388.5, 204.5, -389.5, 203.5, -389.5, 203.5, -390.5, 201.5, -390.5, 201.5, -391.5, 199.5, -391.5, 199.5, -392.5, 198.5, -392.5, 198.5, -393.5, 196.5, -393.5, 196.5, -394.5, 194.5, -394.5, 194.5, -395.5, 193.5, -395.5, 193.5, -396.5, 191.5, -396.5, 191.5, -397.5, 189.5, -397.5, 189.5, -398.5, 187.5, -398.5, 187.5, -399.5, 185.5, -399.5, 185.5, -400.5, 184.5, -400.5, 184.5, -401.5, 183.5, -401.5, 183.5, -402.5, 180.5, -402.5, 180.5, -403.5, 178.5, -403.5, 178.5, -404.5, 176.5, -404.5, 176.5, -405.5, 174.5, -405.5, 174.5, -406.5, 171.5, -406.5, 171.5, -407.5, 169.5, -407.5, 169.5, -408.5, 168.5, -408.5, 168.5, -409.5, 165.5, -409.5, 165.5, -410.5, 162.5, -410.5, 162.5, -411.5, 159.5, -411.5, 159.5, -412.5, 157.5, -412.5, 157.5, -413.5, 154.5, -413.5, 154.5, -414.5, 152.5, -414.5, 152.5, -415.5, 149.5, -415.5, 149.5, -416.5, 147.5, -416.5, 147.5, -417.5, 144.5, -417.5, 144.5, -418.5, 142.5, -418.5, 142.5, -419.5, 141.5, -419.5, 141.5, -420.5, 140.5, -420.5, 140.5, -422.5, 139.5, -422.5, 139.5, -424.5, 138.5, -424.5, 138.5, -425.5, 137.5, -425.5, 137.5, -426.5, 134.5, -426.5, 134.5, -427.5, 131.5, -427.5, 131.5, -428.5, 129.5, -428.5, 129.5, -429.5, 128.5, -429.5, 128.5, -431.5, 127.5, -431.5, 127.5, -434.5, 126.5, -434.5, 126.5, -437.5, 125.5, -437.5, 125.5, -438.5, 124.5, -438.5, 124.5, -439.5, 122.5, -439.5, 122.5, -440.5, 120.5, -440.5, 120.5, -441.5, 118.5, -441.5, 118.5, -442.5, 117.5, -442.5, 117.5, -443.5, 116.5, -443.5, 116.5, -444.5, 114.5, -444.5, 114.5, -445.5, 113.5, -445.5, 113.5, -446.5, 111.5, -446.5, 111.5, -447.5, 109.5, -447.5, 109.5, -448.5, 108.5, -448.5, 108.5, -449.5, 107.5, -449.5, 107.5, -450.5, 106.5, -450.5, 106.5, -451.5, 101.5, -451.5, 101.5, -452.5, 95.5, -452.5, 95.5, -453.5, 92.5, -453.5, 92.5, -454.5, 91.5, -454.5, 91.5, -455.5, 90.5, -455.5, 90.5, -458.5, 89.5, -458.5, 89.5, -459.5, 88.5, -459.5, 88.5, -460.5, 87.5, -460.5, 87.5, -461.5, 84.5, -461.5, 84.5, -460.5, 82.5, -460.5, 82.5, -459.5, 79.5, -459.5, 79.5, -458.5, 77.5, -458.5, 77.5, -457.5, 75.5, -457.5, 75.5, -456.5, 74.5, -456.5, 74.5, -455.5, 73.5, -455.5, 73.5, -454.5, 72.5, -454.5, 72.5, -453.5, 70.5, -453.5, 70.5, -452.5, 67.5, -452.5, 67.5, -451.5, 66.5, -451.5, 66.5, -452.5, 63.5, -452.5, 63.5, -453.5, 61.5, -453.5, 61.5, -454.5, 60.5, -454.5, 60.5, -455.5, 58.5, -455.5, 58.5, -456.5, 57.5, -456.5, 57.5, -457.5, 56.5, -457.5, 56.5, -458.5, 55.5, -458.5, 55.5, -459.5, 53.5, -459.5, 53.5, -460.5, 52.5, -460.5, 52.5, -461.5, 51.5, -461.5, 51.5, -462.5, 50.5, -462.5, 50.5, -463.5, 49.5, -463.5, 49.5, -464.5, 47.5, -464.5, 47.5, -465.5, 44.5, -465.5, 44.5, -466.5, 42.5, -466.5, 42.5, -467.5, 36.5, -467.5, 36.5, -468.5, 23.5, -468.5, 23.5, -469.5, 20.5, -469.5, 20.5, -470.5, 19.5, -470.5, 19.5, -471.5, 18.5, -471.5, 18.5, -473.5, 17.5, -473.5, 17.5, -474.5, 16.5, -474.5, 16.5, -475.5, 13.5, -475.5, 13.5, -474.5, 4.5, -474.5, 4.5, -475.5, -8.5, -475.5, -8.5, -474.5, -14.5, -474.5, -14.5, -473.5, -21.5, -473.5, -21.5, -474.5, -24.5, -474.5, -24.5, -475.5)

[node name="Node2D" type="Node2D" parent="Player"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(577, 638)
scale = Vector2(0.13, 0.13)

[node name="Floor" type="Sprite2D" parent="Floor"]
z_index = -9
texture = ExtResource("8_4s3fm")

[node name="Area2D" type="Area2D" parent="Floor"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Floor/Area2D"]
polygon = PackedVector2Array(-3138.46, 7.69238, -4476.92, -7.69238, -4500, 753.846, 4492.31, 746.154, 4484.62, -30.769)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Floor"]
polygon = PackedVector2Array(-3138.46, 7.69238, -4476.92, -7.69238, -4500, 753.846, 4492.31, 746.154, 4484.62, -30.769)

[node name="Inyeccion" type="Timer" parent="."]
wait_time = 6.126
autostart = true

[node name="Policia3" type="Timer" parent="."]
wait_time = 1.437
autostart = true

[node name="Melon" type="Timer" parent="."]
wait_time = 2.475
autostart = true

[node name="Policia2" type="Timer" parent="."]
wait_time = 2.967
autostart = true

[node name="Platano" type="Timer" parent="."]
wait_time = 1.722
autostart = true

[node name="Label" type="Label" parent="."]
offset_right = 189.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource("FontFile_e1wm8")
theme_override_font_sizes/font_size = 50
text = "Puntos:"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 160.0
offset_top = 273.0
offset_right = 1047.0
offset_bottom = 477.0
theme = SubResource("Theme_4m13l")
theme_override_colors/default_color = Color(0.852867, 0, 0.141029, 1)
text = "HAS SIDO CAPTURADO!!!"
script = ExtResource("13_5u3t5")

[connection signal="timeout" from="Inyeccion" to="." method="_on_inyeccion_timeout"]
[connection signal="timeout" from="Policia3" to="." method="_on_policia__timeout"]
[connection signal="timeout" from="Melon" to="." method="_on_melon_timeout"]
[connection signal="timeout" from="Policia2" to="." method="_on_policia_2_timeout"]
[connection signal="timeout" from="Platano" to="." method="_on_platano_timeout"]
